# drawWordcloud

./: .gitignore  .pre-commit-config.yaml  README.md  README_cn.md  README_en.md  install.sh  pyproject.toml  requirements.txt
src/: README.md  draw_gui.py  wordcloud_gen.py
tests/: test_tkinter.py
